--- a/views/layouts/main.pug
+++ b/views/layouts/main.pug
@@ -1,11 +1,10 @@
 doctype html
 html 
     head    
-        title Wetube
+        title #{pageTitle} | #{siteName}
+        script(src="/scripts/js/all.js")
     body
-        header  
-            h1 WeTube
+        include ../partials/header
         main
             block content
-        footer
-            span &copy; Wetube
+        include ../partials/footer
