--- a/views/home.pug
+++ b/views/home.pug
@@ -8,7 +8,7 @@ block content
                 id:video.id,
                 title:video.title,
                 views:video.views,
-                videoFile:video.videoFile
+                videoFile:video.fileUrl
             })
 
 
